@@ -3,4 +3,3 @@
  * maybe aggregate very old graph data
  * add export button to dump graph data
  * strace window?
- * aggregate multiple processes in one graph
