@@ -33,16 +33,20 @@
         Select Process to Graph
         <div style="float: right;">
           <table><tr><td>
-          <div class="input-group input-group-sm" style="width:300px; top: -4px; padding-right: 40px;">
+          <div class="input-group input-group-sm" style="width:300px; padding-right: 40px;">
             <input type="text" class="form-control" placeholder="user@host (remote host by ssh)" id='sshhost'>
             <span class="input-group-btn">
               <button class="btn btn-default" type="button" id="sshbtn">connect</button>
             </span>
           </div>
           </td><td>
-          <div class="input-group input-group-sm" style="width:300px; top: -4px;">
+          <div class="input-group input-group-sm" style="width:300px;">
             <input type="text" class="form-control" placeholder="Filter" id='proctablefilter'>
             <span id="proctablefilterclear" class="glyphicon glyphicon-remove-circle"></span>
+          </div>
+          </td><td>
+          <div class="btn-group btn-group-sm">
+            <button class="btn btn-default" type="button" id="filterbtn">graph by filter</button>
           </div>
           </td></tr></table>
         </div>
@@ -82,6 +86,7 @@
               <div class="panel-heading"><b>Details</b></div>
               <table class="table" style="table-layout: fixed; width: 290px;">
                 <tr><th style="width: 75px;">PID</th><td id='pid'></td></tr>
+                <tr><th style="width: 75px;">Filter</th><td id='filter'></td></tr>
                 <tr><th>User</th><td id='user'></td></tr>
                 <tr><th>Priority</th><td id='prio'></td></tr>
                 <tr><th>Nice</th><td id='nice'></td></tr>
